# molvis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  PIPELINE_MODIFIER_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  SIDEBAR_REFACTORING.md  biome.json  index.html  main.js  package-lock.json  package.json  rsbuild.config.ts  test.js  tsconfig.base.json  typedoc.base.json  typedoc.json  zensical.toml  zensical.yml
.claude/agents/: molvis-architect.md  molvis-documenter.md  molvis-explorer.md  molvis-lead.md  molvis-optimizer.md  molvis-planner.md  molvis-reviewer.md  molvis-tester.md
.claude/notes/: README.md  architecture.md  core-arch.md  frontend-style.md  notes.md  open-questions.md  wasm-api.md
.claude/product/: features.md
.claude/specs/: INDEX.md  advanced-reset-camera.acceptance.md  advanced-reset-camera.md  camera-trajectory-turntable.acceptance.md  camera-trajectory-turntable.md  core-charts.md  core-review-remediation.acceptance.md  core-review-remediation.md  data-source-synthesis-03-synthesis-core.acceptance.md  data-source-synthesis-03-synthesis-core.md  data-source-synthesis-06-ui.acceptance.md  data-source-synthesis-06-ui.md  dataset-explorer.md  multi-source-overlay-01-kabsch.acceptance.md  multi-source-overlay-01-kabsch.md  multi-source-overlay-02-edge.acceptance.md  multi-source-overlay-02-edge.md  multi-source-overlay-03-combine.acceptance.md  multi-source-overlay-03-combine.md  multi-source-overlay-04-color.acceptance.md  multi-source-overlay-04-color.md  multi-source-overlay-05-ui.acceptance.md  multi-source-overlay-05-ui.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-page.yml  publish-core.yml  release-core.yml  release-python.yml  release-vsc-ext.yml  release.yaml
core/: .gitignore  LICENSE  README.md  esbuild.build.js  esbuild.config.js  esbuild.dev.js  index.html  index.ts  jest.config.cjs  jest.config.js  jest.config.ts  package-lock.json  package.json  rsbuild.config.ts  rsbuild.headless.config.ts  rslib.config.ts  rstest.bench.config.ts  rstest.config.ts  test_select.html  tsconfig.json
core/bench/: playback.bench.ts
core/examples/: demo_empty.ts  demo_frame.ts  demo_perf.ts  demo_traj.ts  headless.html  headless_render.ts  index.html  index.ts
core/scripts/: headless_render_runner.mjs
core/src/: app.ts  artist.ts  axes.ts  axis_helper.ts  config.ts  controller.ts  data_inspector.ts  dom_helpers.ts  entity_source.ts  events.ts  frame_render_scheduler.ts  grid.ts  gui.ts  highlighter.ts  index.ts  menu.ts  mode.ts  molrs-field.d.ts  palette.ts  picker.ts  reader.ts  renderer.ts  save_file.ts  scene_index.ts  scene_sync.ts  selection_manager.ts  utils.ts  (+9 more)
docs/: architecture.md  getting-started.md  index.md
electron/: package.json  tsconfig.json
example/: molvis_demo.ipynb  nacl_sphere_demo.ipynb
examples/: widget_demo.ipynb
molplot/: README.md  package.json  rslib.config.ts  rstest.config.ts  tsconfig.json
page/: README.md  package.json  rsbuild.config.ts  tsconfig.json
python/: .gitignore  README.md  package.json  pyproject.toml  rslib.config.ts  tsconfig.json  zensical.toml
python/docs/: development.md  index.md  quickstart.md
python/docs/api/: commands.md  events.md  jupyter.md  show.md  standalone.md  transport.md
python/examples/: chemiscope_tg.py  pipeline_crud.py
python/src/molvis/: __init__.py  cli.py  control.py  errors.py  events.py  palettes.py  runtime.py  scene.py  server.py  standalone.py  transport.py  transport_base.py  types.py  utils.py  video.py  ws_transport.py
python/src/molvis/commands/: __init__.py  catalog.py  drawing.py  frame.py  overlay.py  palette.py  pipeline.py  selection.py  snapshot.py
python/src/molvis/transport/: __init__.py  _codec.py  _jupyter_env.py  websocket.py
python/src/ts/: config.ts  index.ts  jsonrpc.ts  serialization.ts  types.ts  widget.ts
python/tests/: test_control.py  test_events.py  test_jupyter_env.py  test_palette_rpc.py  test_palettes.py  test_pipeline_rpc.py  test_rpc_errors.py  test_runtime.py  test_scene_smoke.py  test_selection_sync.py  test_state_sync.py  test_transport.py  test_transport_websocket.py  test_video.py
standalone/: esbuild.config.js  index.html  package.json  rsbuild.config.ts  tailwind.config.js  tsconfig.json
vsc-ext/: .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  biome.json  package-lock.json  package.json  rslib.config.ts  rslib.extension.config.mts  rslib.extension.config.ts  rslib.webview.config.mts  rslib.webview.config.ts  tsconfig.integration.json  tsconfig.json  tsconfig.test.json
widget/: README.md  esbuild.config.js  package.json  pyproject.toml  rsbuild.config.ts  rslib.config.ts  setup.py  tsconfig.json  vite.config.mjs
widget/example/: test_molvis.ipynb
widget/src/: MolvisWidget.ts  index.ts  jsonrpc-handler.ts  style.css  types.ts  utils.ts  widget.ts
widget/src/molvis/: __about__.py  __init__.py  types.py  utils.py  widget.py
widget/src/molvis.egg-info/: PKG-INFO  SOURCES.txt
widget/src/ts/: config.ts  hdf5-parser.ts  index.ts  jsonrpc.ts  types.ts  utils.ts  widget.ts
widget/src/ts/__tests__/: jsonrpc.test.ts
widget/tests/: test_utils.py
(+757 files in other folders)
