[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molvis"
version = "0.1.0"
description = "Jupyter widget for molecular visualization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MolCrafts Team" }
]
keywords = ["molecular", "visualization", "jupyter", "widget", "chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Jupyter",
]
dependencies = [
    "anywidget>=0.9.0",
    "molcrafts-molpy",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/molcrafts/molvis"
Repository = "https://github.com/molcrafts/molvis"

[tool.hatch.build.targets.wheel]
packages = ["src/molvis"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
