[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molcrafts-molvis"
version = "0.0.4"
description = "Molecular visualization driven by a local WebSocket-hosted page"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "MolCrafts Team" }
]
keywords = ["molecular", "visualization", "jupyter", "chemistry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "molcrafts-molpy",
    "numpy",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "hatchling",
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/molcrafts/molvis"
Repository = "https://github.com/molcrafts/molvis"

[tool.hatch.build]
# Ship the built page bundle inside the wheel — it's hosted by
# WebSocketTransport when no external `page_url` is given.
artifacts = [
    "src/molvis/dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/molvis"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
