[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molvis"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Roy Kid", email = "lijichen365@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Roy_Kid/molvis#readme"
Issues = "https://github.com/Roy_Kid/molvis/issues"
Source = "https://github.com/Roy_Kid/molvis"

[tool.hatch.version]
path = "src/molvis/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/molvis tests}"

[tool.coverage.run]
source_pkgs = ["molvis", "tests"]
branch = true
parallel = true
omit = [
  "src/molvis/__about__.py",
]

[tool.coverage.paths]
molvis = ["src/molvis", "*/molvis/src/molvis"]
tests = ["tests", "*/molvis/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
