[project]
name = "molvis"
authors = [
    { name = "Roy Kid", email = "lijichen365@gmail.com" },
]
description = "Jupyter widget for molvis"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "anywidget",
    "pyarrow",
    "h5py"
]

[project.optional-dependencies]
dev = [
    "anywidget[dev]",
    "pyarrow",
    "h5py"
]

[tool.black]
line-length = 88
